# hello-my-agents

./: .env_example  .gitignore  HelloDify-多平台内容生成器.yml  RAG：四大名著问答系统.ipynb  README.md  campaign_summary_2026-05-11_23-03-08.md  pyproject.toml  utils.py  基于AgentScope的个人研究助手.ipynb  基于AutoGen的自动编码助手.ipynb  模型微调：学习写唐诗.ipynb  爆款产品市场调研及海报生成.ipynb
BossJobSeeker/: boss_utils.py
example results/: hongloumeng_QA.numbers
testing_env/: .env_example  Dockerfile  example.py  output.py  shell_debug.py
testing_env/shell/: run.sh
tools/: general_tools.py  tool_utils.py
