[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-my-agents"
version = "0.1.0"
description = "基于AutoGen和AgentScope的自动编码助手项目"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "requests",
  "pandas",
  "numpy",
  "plotly",
  "python-dotenv",
  "ollama",
  "openai",
  "ipython",
  "playwright>=1.59.0",
  "autogen-ext>=0.7.5",
  "autogen-agentchat>=0.7.5",
  "tiktoken>=0.12.0",
  "pytz>=2026.2",
  "tavily>=1.1.0",
  "gradio>=6.14.0",
  "langchain>=1.2.18",
  "langchain-classic>=1.0.7",
  "langchain-community>=0.4.1",
  "langchain-text-splitters>=1.1.2",
  "langchain-core>=1.4.0",
  "sentence-transformers>=5.4.1",
  "protobuf>=5.29.6",
  "langchain-chroma>=1.1.0",
  "chromadb>=1.5.9",
  "chardet>=7.4.3",
  "rank-bm25>=0.2.2",
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.2",
  "jieba>=0.42.1",
  "langchain-huggingface>=1.2.2",
  "spacy>=3.8.14",
  "faiss-cpu>=1.8.0",
  "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["Images", "testing_env"]
